--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,6 +11,8 @@ builds:
       - linux_amd64_v1
       - darwin_amd64
       - darwin_arm64
+      - windows_amd64
+      - windows_arm64
     main: ./cmd/noah-mqtt
 archives:
   - files:
