--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
             echo "Triggering with tag '$TAG'"
             curl \
               -X POST \
-              -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+              -H "Authorization: token ${{ secrets.WORKFLOW_PAT }}" \
               -H "Accept: application/vnd.github.everest-preview+json" \
               -H "Content-Type: application/json" \
               https://api.github.com/repos/mtrossbach/hassio-addons/dispatches \
