--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -34,8 +34,7 @@ dockers:
       - --label=org.opencontainers.image.version={{ .Version }}
       - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
-      - --label=org.opencontainers.image.licenses=MIT
-      - --build-arg=VERSION={{ .Version }}
+      - --label=org.opencontainers.image.licenses=Apache-2.0
     image_templates:
       - &arm64v8_image "ghcr.io/mtrossbach/{{ .ProjectName }}:{{ .Version }}-arm64v8"
     extra_files:
@@ -54,8 +53,7 @@ dockers:
       - --label=org.opencontainers.image.version={{ .Version }}
       - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
-      - --label=org.opencontainers.image.licenses=MIT
-      - --build-arg=VERSION={{ .Version }}
+      - --label=org.opencontainers.image.licenses=Apache-2.0
     image_templates:
       - &armv6_image "ghcr.io/mtrossbach/{{ .ProjectName }}:{{ .Version }}-armv6"
     extra_files:
@@ -73,8 +71,7 @@ dockers:
       - --label=org.opencontainers.image.version={{ .Version }}
       - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
-      - --label=org.opencontainers.image.licenses=MIT
-      - --build-arg=VERSION={{ .Version }}
+      - --label=org.opencontainers.image.licenses=Apache-2.0
     image_templates:
       - &amd64_image "ghcr.io/mtrossbach/{{ .ProjectName }}:{{ .Version }}-amd64"
     extra_files:
